--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://camo.githubusercontent.com/83872a3399949be82a508071a0bd29f0bf46894be84f1de8394a43ad0e9bc049/68747470733a2f2f7777772e66726565706e676c6f676f732e636f6d2f75706c6f6164732f7269636b2d616e642d6d6f7274792d706e672f7269636b2d616e642d6d6f7274792d706f7274616c2d73686f65732d77686974652d636c6f7468696e672d7a617676692d32332e706e67" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rick and Morty API Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
